# confector-copilot

./: .env.example  .gitignore  README.md  package-lock.json  package.json
ai/agents/: README.md
ai/models/: README.md  pyproject.toml
ai/models/src/confector_ai_models/: __init__.py  provider.py  selector.py
ai/orchestration/: README.md
ai/prompts/: README.md
ai/tools/: README.md  pyproject.toml
ai/tools/src/confector_ai_tools/: __init__.py  speech.py
apps/api/: README.md  pyproject.toml
apps/api/app/: config.py  dependencies.py  events_setup.py  logging.py  main.py
apps/api/app/api/: documents.py  knowledge.py  projects.py  schemas.py
apps/api/app/services/: document_service.py  knowledge_service.py  project_service.py
apps/api/app/workers/: __init__.py  document_processor.py
apps/desktop/: README.md  index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx  api.ts
apps/web/: README.md
docs/architecture/: 00_VISION.md  01_PRODUCT_PRINCIPLES.md  02_PRODUCT_ARCHITECTURE.md  03_USER_EXPERIENCE.md  04_KNOWLEDGE_MODEL.md  05_TECH_STACK.md  06_DOMAIN_MODEL.md  07_EVENT_ARCHITECTURE.md  08_AGENT_ARCHITECTURE.md  09_SYSTEM_BLUEPRINT.md  10_MVP_ROADMAP.md  11_DEVELOPMENT_GUIDELINES.md  12_PROJECT_STRUCTURE.md  13_ARCHITECT.md
docs/decisions/: ADR-001-project-structure-source-of-truth.md  ADR-002-backend-location.md  ADR-003-project-entity-ownership.md  ADR-004-mvp-desktop-first.md
docs/development/: testing-conventions.md
domain-packs/construction/: README.md  pyproject.toml
domain-packs/construction/src/confector_construction/: __init__.py  entity_types.py  extractor.py
knowledge-os/: pyproject.toml
knowledge-os/context/: README.md
knowledge-os/embeddings/: README.md
knowledge-os/graph/: README.md
knowledge-os/indexing/: README.md
knowledge-os/memory/: README.md
knowledge-os/retrieval/: README.md
knowledge-os/search/: README.md
knowledge-os/src/confector_knowledge_os/: __init__.py  entities.py  graph.py  search.py
