[project]
name = "confector-ai-models"
version = "0.1.0"
description = "LLM Adapter — interfaz común para proveedores de IA intercambiables (01_PRODUCT_PRINCIPLES #4, AI Agnostic)."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
