[project]
name = "confector-ai-tools"
version = "0.1.0"
description = "Herramientas que usan los agentes (08_AGENT_ARCHITECTURE §'Herramientas'). MVP: transcripción de audio (Whisper, 05_TECH_STACK)."
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
