[project]
name = "confector-api"
version = "0.1.0"
description = "Backend FastAPI local de CONFECTOR Copilot (ADR-002, ADR-004)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "loguru>=0.7",
    "confector-core",
    "confector-database",
    "confector-ai-models",
    "confector-exporters",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
