[project]
name = "confector-api"
version = "0.1.0"
description = "Backend FastAPI local de CONFECTOR Copilot (ADR-002, ADR-004)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "loguru>=0.7",
    "python-multipart>=0.0.17",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "confector-core",
    "confector-database",
    "confector-events",
    "confector-ai-models",
    "confector-ai-tools",
    "confector-exporters",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
