[project]
name = "confector-construction"
version = "0.1.0"
description = "Vocabulario y reglas de gerencia de proyectos de construcción (ADR-003). Depende de knowledge-os, nunca al revés."
requires-python = ">=3.12"
dependencies = [
    "confector-knowledge-os",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
